src/App.css
/* ... */
.inventory-items-select-container-title{
    display: flex;
    justify-content: space-between;
    margin-bottom: 5px;
}
.close-inventory-items-select-container{
    /*background: #ff3375;*/
    padding: 3px;
    padding-inline: 10px;
    border: 0.5px solid transparent;
}

.close-inventory-items-select-container:hover{

    border: 0.5px solid #e2e2dd90;
    background-color: rgba(251, 251, 249, 0.2);

}


.inventory-items-select-list{

    display: flex;
    align-items: flex-end;
    border-bottom: 2px solid rgba(244, 244, 241, 0.56);



}
.inventory-items-select-list li{

    align-self: flex-end;
    display: flex;




}

.inventory-items-select-list li button{

    color: white;
    border-bottom:none;
    padding: 10px;
    align-self: flex-end;




}
.inventory-items-inactive-tab{
    border: 2px solid transparent;
}

.active-tab{
    border: 2px solid #e2e2dd90;



}

.all-developed-items{

    /*background-color: red;*/
    max-height: 280px;
    min-height: 280px;
    overflow-y: auto;


}
.item-category{
    margin-top: 5px;

}
.item-category-heading{
    display: flex;
    justify-content: space-between;
    background-color: white;
    color: black;
    padding: 10px;

}

.item-category-heading h3{
  align-self: center;
}

.item-category-expand-collapse-btn{

    font-size: 20px;
    transition: transform 0.3s ease-in-out;


}
.after-click{

    transform: rotate(90deg);


}

.items-table{
    margin-top: 0px;
    width: 100%;

}
td, th {
    border: 1px solid #dddddd;
    text-align: left;
    padding: 8px;

}
.clear-selection-btn{
    margin-top: 10px;
    background: black;
    border-radius: 1.5rem;
    padding:8px;
    font-size: 13px;
    cursor: pointer;

}

.clear-selection-btn-and-label{
    align-self: flex-end;
}

.clear-selection-btn:hover{
    background: white;
    color: black;

}
.team-selection-and-mission-start{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap:50px;


}
.team-members-and-mission-select-section{
    display: flex;
    /*justify-content: space-between;*/
    align-items: stretch;
    justify-content: center;
    flex-wrap: wrap;
    height: fit-content;
    /*border: 5px solid green;*/
    @media(max-width: 1410px){
        padding-top: 60px;
        /*gap: 300px;*/
        flex-direction: column-reverse;
    }


}


.select-mission-header{
    background-color: #d11010;
    color: white;
    position:absolute;
    bottom:90%;
    padding:10px;
    padding-right: 30px;
    margin-left: 25px;
    padding-bottom: 30px;
    font-size: 30px;
    @media(max-width: 1410px){
        position: static;
        margin-left:0px;
    }
}

.mission-select-section{
    padding: 0;
    display: flex;
    border: 1px solid white;
    justify-content: flex-start;
}


/****************************** MAP AND SELECTOR STYLES**********************************/

.map-window{
    width:500px;

    border-right:1px solid #e2e2dd90;
    overflow: hidden;
    position:relative;
    display: flex;
    background-color: black;
    height: 300px;
    flex-grow: 1;
    border:2px solid #e2e2dd90;
    border-right: 1px solid #e2e2dd90;
    @media(max-width: 1410px) {
        border-bottom: 1px solid #e2e2dd90;
    }

}
.header-and-map-and-missions{
    position:relative;
    @media(max-width: 1410px){
        width: 100%;
    }

}
.mission-name-and-description{
    background-color: #d11010;


    position: absolute;
    top:80%;
    left:38%;
    padding:10px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: wrap;
    width: 500px;

    @media(max-width: 1410px){
        position:static;
        margin-bottom:10px;
        width:100%;


    }


}

.mission-name{
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: wrap;
    width: 100%;
}

.mission-desc{
    height: 50px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: wrap;
    width: 100%;

}


.map-and-missions{
    display:flex;
    height: fit-content;
    justify-content: space-between;
    flex-grow: 0;
    flex-wrap: wrap;
    margin-left: 50px;
    /*border: 10px solid rgba(220, 220, 46, 0.56);*/
    /*border:2px solid #e2e2dd90;*/
    @media(max-width: 1410px){
        margin-left: 0;

    }




}

.mission-list-div{
    /*background-color: #34da34;*/
    /*border:2px solid #e2e2dd90;*/
    padding: 3px;
    flex-grow: 1;
    border:2px solid #e2e2dd90;
    border-left:1px solid #e2e2dd90;

}

.missions-list{
    display: flex;
    flex-direction: column;
    border:0.5px solid #e2e2dd90;
    overflow: auto;
    height: 230px;
    min-width:300px;
    border-left:1px solid #e2e2dd90;
    background-color: #000000;
    @media(max-width: 1410px){
        height: 295px;
    }






}
.mission-list-item-active{
    background-color: #d11010;

}

.mission-list-item{
    padding-block: 2px;
    width: 100%;
    display: flex;
    padding: 0;
    border-bottom: 1px solid #e2e2dd90;

}
.mission-list-item-btn{
    flex: 1;
    height: 100%;
    width: 100%;
    border: none;
    margin: 0;
    padding: 0;
    text-align: left;
    padding-left: 5px;
    padding-right: 10px;
}
/************************************GAME BOARD CSS****************************/
.gameboard-header{
    display: flex;
    /*background-color: #d11010;*/
    align-items: center;
    padding:2px;

}
.gameboard-header div{
    padding-left: 10px;
}
.gameplay-area{
    display: flex;
    flex-direction: column;
    /*background-color: rebeccapurple;*/
}
.game-and-panel{
    display: flex;
    background: #ff3375;
    box-shadow: -10px 10px lightblue;

}
.player-control-panel{
    border: 3px solid black;
    margin-block: 1px;
    margin-left:2px;
    width:400px;
    padding:10px;

}
/* ... */

